--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -59,4 +59,14 @@
       @apply font-semibold text-lg mb-8 px-4;
     }
   }
+  // footer section
+  .footer {
+    @apply md:border-t border-borderColor col-span-2 grid grid-cols-2 md:grid-cols-3;
+    ul {
+      @apply py-4 space-y-1;
+      li {
+        @apply hover:scale-110 cursor-pointer hover:font-black;
+      }
+    }
+  }
 }
